--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -5,10 +5,10 @@
 replicaCount: 1
 
 image:
-  repository: 211223789150.dkr.ecr.us-east-1.amazonaws.com/my-docker-repo
+  repository: prabhat8051/spring-boot-helm-demo
   pullPolicy: IfNotPresent
   # Overrides the image tag whose default is the chart appVersion.
-  tag: ""
+  tag: "1.0.0"
 
 imagePullSecrets: []
 nameOverride: ""
