--- a/mychart/values.yaml
+++ b/mychart/values.yaml
@@ -37,8 +37,8 @@ securityContext: {}
   # runAsUser: 1000
 
 service:
-  type: LoadBalancer
-  port: 80
+  type: NodePort
+  port: 9099
 
 ingress:
   enabled: false
